--- a/Programmers/1/pick-pair-sum.ipynb
+++ b/Programmers/1/pick-pair-sum.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 두 개 뽑아서 던지기\n",
+    "\n",
+    "출처: https://school.programmers.co.kr/learn/courses/30/lessons/68644\n",
+    "\n",
     "배열의 길이 = n  \n",
     "시간복잡도 = O(n^2)\n",
     "\n",
-    "Count Sort 응용해봤음\n",
-    "\n",
-    "출처: https://school.programmers.co.kr/learn/courses/30/lessons/68644"
+    "Count Sort 응용해봤음"
    ]
   },
   {
