--- a/Programmers/1/섬-연결하기.ipynb
+++ b/Programmers/1/섬-연결하기.ipynb
@@ -4,9 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 섬 연결하기\n",
+    "# 섬 연결하기\n",
     "\n",
-    "출처: https://school.programmers.co.kr/learn/courses/30/lessons/42861"
+    "출처: https://school.programmers.co.kr/learn/courses/30/lessons/42861\n",
+    "\n",
+    "### 접근 방법\n",
+    "- 크루스칼 알고리즘\n",
+    "\n",
+    "### 시간 복잡도 분석\n",
+    "\n",
+    "\n",
+    "### 새로 알게 된 것\n",
+    "\n",
+    "\n",
+    "### 주의할 점\n",
+    "\n",
+    "\n",
+    "### 기타 코멘트\n",
+    "\n"
    ]
   },
   {
