--- a/Programmers/1/전력망을-둘로-나누기.ipynb
+++ b/Programmers/1/전력망을-둘로-나누기.ipynb
@@ -13,11 +13,21 @@
     "출처: https://school.programmers.co.kr/learn/courses/30/lessons/86971\n",
     "\n",
     "### 접근 방법\n",
+    "1st  \n",
     "존재하는 모든 간선을 하나씩 끊어보고, bfs로 탐색을 진행하여 결과값을 비교한다.\n",
     "\n",
+    "2nd  \n",
+    "위상 정렬에서 사용하는 방법에 착안하여, 트리의 제일 가장자리에 위치한 노드만 방문하면서 노드가 포함되는 전력망의 최대 송전탑 개수를 갱신해나가는 방식을 생각해내었다.\n",
+    "\n",
+    "트리의 제일 가장자리에 위치한 송전탑을 방문할 때는 우선순위 큐를 사용하여 보유 가능한 송전탑 수가 제일 적은 것부터 방문해야 최종적으로 송전탑 수의 차이를 최소로 만들 수 있다.\n",
+    "\n",
+    "방문하지 않은 송전탑이 2개 남게 되면, 이들 송전탑 사이의 전선을 끊으면 된다.\n",
+    "\n",
     "### 시간 복잡도 분석\n",
-    "노드의 수 = N  \n",
-    "시간복잡도 = O(N^2)\n",
+    "간선의 수 = E  \n",
+    "송전탑 수 = V  \n",
+    "brute-force 시간복잡도 = O(E^2)\n",
+    "greedy 시간복잡도 = O(ElogV)\n",
     "\n",
     "### 새로 알게 된 것\n",
     ".\n",
@@ -63,6 +73,41 @@
     "        graph[a][b] = True\n",
     "        graph[b][a] = True\n",
     "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "def solution(n, wires):\n",
+    "    q = []\n",
+    "    deg = [0] * (n+1)\n",
+    "    graph = [set() for _ in range(n+1)]\n",
+    "    connected = [1] * (n+1)\n",
+    "    for a, b in wires:\n",
+    "        deg[a] += 1\n",
+    "        deg[b] += 1\n",
+    "        graph[a].add(b)\n",
+    "        graph[b].add(a)\n",
+    "    for i in range(1, n+1):\n",
+    "        if deg[i] == 1:\n",
+    "            heapq.heappush(q, (1, i))\n",
+    "    cnt = 0\n",
+    "    while True:\n",
+    "        cnt += 1\n",
+    "        dist, cur = heapq.heappop(q)\n",
+    "        nex = graph[cur].pop()\n",
+    "        graph[nex].discard(cur)\n",
+    "        connected[nex] += dist\n",
+    "        deg[nex] -= 1\n",
+    "        if deg[nex] == 1:\n",
+    "            if cnt == n - 2:\n",
+    "                return abs(n - connected[nex] * 2)\n",
+    "            heapq.heappush(q, (connected[nex], nex))"
    ]
   }
  ],
