--- a/Programmers/3/단어-퍼즐.ipynb
+++ b/Programmers/3/단어-퍼즐.ipynb
@@ -99,6 +99,27 @@
     "                    dp[i] = min(dp[i], dp[j-1] + 1)\n",
     "    return dp[-1] if dp[-1] != INF else -1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(strs, t):\n",
+    "    word_set = set(strs)\n",
+    "    dp = [0] * len(t)\n",
+    "    for i in range(len(t)):\n",
+    "        for j in range(1, 6):\n",
+    "            if i - j + 1 == 0 and t[i-j+1:i+1] in word_set:\n",
+    "                dp[i] = 1\n",
+    "            elif i - j + 1 > 0 and dp[i - j] > 0 and t[i-j+1:i+1] in word_set:\n",
+    "                if dp[i]:\n",
+    "                    dp[i] = min(dp[i], dp[i-j] + 1)\n",
+    "                else:\n",
+    "                    dp[i] = dp[i-j] + 1\n",
+    "    return dp[-1] if dp[-1] else -1"
+   ]
   }
  ],
  "metadata": {
